css/career.css
/* ... */
  
  section#contact :-ms-input-placeholder {
    font-weight: 700;
    color: #ced4da;
    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
  }
  
  footer {
    padding: 25px 0;
    text-align: center;
  }
  
  footer span.copyright {
    font-size: 90%;
    line-height: 40px;
    text-transform: none;
    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
  }
  
  footer ul.quicklinks {
    font-size: 90%;
    line-height: 40px;
    margin-bottom: 0;
    text-transform: none;
    font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
  }
  
  ul.social-buttons {
    margin-bottom: 0;
  }
  
  ul.social-buttons li a {
    font-size: 20px;
    line-height: 50px;
    display: block;
    width: 50px;
    height: 50px;
    -webkit-transition: all 0.3s;
    transition: all 0.3s;
    color: white;
    border-radius: 100%;
    outline: none;
    background-color: #212529;
  }
  
  ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons li a:hover {
    background-color: #fed136;
  }
  



  hr { 
    width: 75%;
    border: 0.5px grey solid;
  }

.fa-stack { 
    display: inline;
}

#canID { 
    width: 100%;
    padding: 50px 50px;
    background-color: #F3F3F3;
    margin-top: 20px;
    font-weight: 300;
    
}

#amID { 
    width: 100%;
    padding: 50px 50px;
    background-color: #F3F3F3;
    margin-top: 20px;
    font-weight: 300;
}

#chinID { 
    width: 100%;
    padding: 50px 50px;
    background-color: #F3F3F3;
    margin-top: 20px;
    font-weight: 300;

}

#button:focus { 
    outline: 0;
}

